# tugastugas

./: .gitignore  README.md  TODO  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 068c1ae43e5f_remove_project_layer.py  0e3edbd17f92_set_from_undo_default.py  0f7a254539ba_add_user_project.py  32c172b082bc_make_username_unique.py  355ad8439f4e_add_user_project_relation.py  40bce48bbe39_create_project_table.py  43231e5417f3_sync_ddl_of_project_and_user.py  5cf167bffb72_rename_data_field_to_content.py  6c41dc7e9a66_add_used_marker_in_h_task.py  7882600276b3_add_project.py  95be198e6456_reset.py  a8fd9bfd02ca_cascade_delete.py  ab51d02cb858_add_user_project_with_cascade_delete.py  b6f148ed96f6_add_data_field_to_project.py  e5fd722882aa_to_date.py  f64ca5f0177f_create_user_table.py  fce4251eee5b_add_undo_function.py
src/tugastugas/: add_fake_users.py  app.py  database.py  models.py  schema.py
tests/: test_graphql.py
